--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,15 @@ ultralytics>=8.0.0
 transformers>=4.30.0
 scikit-learn>=1.3.0
 
+# Qwen multimodal model
+modelscope>=1.9.0
+transformers_stream_generator>=0.0.1
+
+# Model optimization
+bitsandbytes>=0.41.0
+accelerate>=0.20.0
+auto-gptq>=0.4.0
+
 # Image processing
 scikit-image>=0.21.0
 
