--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,8 @@
-# 忽略常见大模型权重和缓存
-models/
+# Model files (too large for GitHub)
 *.pt
-*.bin
-*.ckpt
-*.safetensors
-*.onnx
-*.h5
 *.pth
-*.npz
-*.npy
+*.onnx
 *.pb
-*.tflite
-*.mlmodel
-*.tar.gz
-*.zip
-*.tar
-*.rar
-*.7z
-
-# HuggingFace/transformers/modelscope 缓存
-~/.cache/
-~/.huggingface/
-~/.modelscope/
-.cache/
-.huggingface/
-.modelscope/
-
-# 数据集和输出
-*.csv
-*.tsv
-demo_output/
-tiktok_frames/
-tiktok_videos/
-
-# Jupyter/VSCode/IDE 临时文件
-.ipynb_checkpoints/
-.vscode/
-*.log
-*.tmp
-*.bak
-*.swp
-.DS_Store
-Thumbs.db
-
-# Python 编译文件
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-
-# 其他
-SimSun.ttf
 
 # Data files
 *.mp4
@@ -63,15 +15,17 @@ SimSun.ttf
 *.aac
 *.ogg
 
-# Results files
-*.json
-speech_text.txt
-
 # Frame directories (generated data)
 tiktok_frames/
 tiktok_videos/
 
+# Results files
+*.csv
+*.json
+speech_text.txt
+
 # Python
+__pycache__/
 *.py[cod]
 *$py.class
 *.so
@@ -93,6 +47,9 @@ wheels/
 *.egg
 MANIFEST
 
+# Jupyter Notebook
+.ipynb_checkpoints
+
 # Environment
 .env
 .venv
@@ -103,6 +60,7 @@ env.bak/
 venv.bak/
 
 # IDE
+.vscode/
 .idea/
 *.swp
 *.swo
@@ -118,7 +76,9 @@ ehthumbs.db
 Thumbs.db
 
 # Logs
+*.log
 logs/
 
 # Temporary files
+*.tmp
 *.temp 
