--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,51 @@
 # Core dependencies
-torch>=2.0.0
-torchvision>=0.15.0
-torchaudio>=2.0.0
-opencv-python>=4.8.0
-numpy>=1.24.0
-pandas>=2.0.0
-Pillow>=10.0.0
-tqdm>=4.65.0
+torch
+torchvision
+torchaudio
+opencv-python
+numpy<2.0.0
+pandas
+Pillow
+tqdm
 
 # Audio processing
-ffmpeg-python>=0.2.0
-openai-whisper>=20231117
-torch-audio>=2.0.0
+ffmpeg-python
+openai-whisper
+librosa
+soundfile
+scipy
+
+# Audio source separation
+dora-search
+pyyaml
+demucs
 
 # Computer vision and ML
-ultralytics>=8.0.0
-transformers>=4.30.0
-scikit-learn>=1.3.0
+ultralytics
+transformers
+scikit-learn
 
 # Qwen multimodal model
-modelscope>=1.9.0
-transformers_stream_generator>=0.0.1
+modelscope
+transformers_stream_generator
+einops
 
 # Model optimization
-bitsandbytes>=0.41.0
-accelerate>=0.20.0
-auto-gptq>=0.4.0
+bitsandbytes
+accelerate
+auto-gptq
 
 # Image processing
-scikit-image>=0.21.0
+scikit-image
 
 # Utilities
-matplotlib>=3.7.0
-seaborn>=0.12.0
-jupyter>=1.0.0
-ipykernel>=6.25.0
+matplotlib
+seaborn
+jupyter
+ipykernel
+shazamio
+protobuf
 
 
+git+https://github.com/openai/CLIP.git
 
-# Optional: for better performance
-# torch-scatter  # Uncomment if using PyTorch Geometric
-# torch-sparse   # Uncomment if using PyTorch Geometric 
